[gd_scene load_steps=6 format=3 uid="uid://b4eycbitbjbxg"]

[ext_resource type="Script" uid="uid://dp3ui4xb33mng" path="res://car.gd" id="1_7822p"]
[ext_resource type="Script" uid="uid://gq0g0cgb0emp" path="res://camera_3d.gd" id="2_06lh1"]
[ext_resource type="PackedScene" uid="uid://cbjy0k88wv7jt" path="res://models/yargkart wheel.glb" id="2_k61xc"]
[ext_resource type="PackedScene" uid="uid://bdhw1pv7jvm3i" path="res://models/yargkart.glb" id="2_uoj53"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k61xc"]
radius = 0.784671
height = 2.36687

[node name="Car" type="CharacterBody3D"]
collision_layer = 16
script = ExtResource("1_7822p")
engine_force_value = 5000.0
decel = 3000.0
gravity = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_k61xc")

[node name="KartModel" parent="." instance=ExtResource("2_uoj53")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, -0.0850269, -0.138039, 0)

[node name="FLWheelModel" parent="." instance=ExtResource("2_k61xc")]
transform = Transform3D(6.5567e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, 6.5567e-08, 0.580147, -0.363534, -0.707741)

[node name="FrWheelModel" parent="." instance=ExtResource("2_k61xc")]
transform = Transform3D(-2.18556e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18556e-08, 0.580415, -0.389785, 0.684739)

[node name="BRWheelModel" parent="." instance=ExtResource("2_k61xc")]
transform = Transform3D(-2.18556e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18556e-08, -0.571746, -0.389785, 0.684739)

[node name="BLWheelModel" parent="." instance=ExtResource("2_k61xc")]
transform = Transform3D(6.5567e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, 6.5567e-08, -0.571746, -0.389785, -0.705314)

[node name="ParryCooldown" type="Timer" parent="."]
one_shot = true

[node name="ParryDebounce" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("follow_target", "look_target")]
top_level = true
current = true
script = ExtResource("2_06lh1")
follow_target = NodePath("..")
look_target = NodePath("..")

[connection signal="timeout" from="ParryCooldown" to="." method="_on_parry_cooldown_timeout"]
[connection signal="timeout" from="ParryDebounce" to="." method="_on_parry_debounce_timeout"]
